--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/processors.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/processors.adoc
@@ -1,14 +1,14 @@
-[[spring-cloud-stream-modules-processors]]
+[[processors]]
 == Processors
 
 :leveloffset: +2
 
 [[spring-cloud-stream-modules-filter]]
-include::{stream-apps-root}/stream-applications/{branch}/processor/filter-processor/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/applications/{branch}/processor/filter-processor/README.adoc[tags=ref-doc]
 [[spring-cloud-stream-modules-splitter]]
-include::{stream-apps-root}/stream-applications/{branch}/processor/splitter-processor/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/applications/{branch}/processor/splitter-processor/README.adoc[tags=ref-doc]
 [[spring-cloud-stream-modules-transform]]
-include::{stream-apps-root}/stream-applications/{branch}/processor/transform-processor/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/applications/{branch}/processor/transform-processor/README.adoc[tags=ref-doc]
 
 :leveloffset: -2
 
