--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sources.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sources.adoc
@@ -4,16 +4,16 @@
 :leveloffset: +2
 
 [[spring-cloud-stream-modules-http-source]]
-include::{stream-apps-root}/applications/{branch}/source/http-source/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/{branch}/applications/source/http-source/README.adoc[tags=ref-doc]
 
 [[spring-cloud-stream-modules-jdbc-source]]
-include::{stream-apps-root}/applications/{branch}/source/jdbc-source/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/{branch}/applications/source/jdbc-source/README.adoc[tags=ref-doc]
 
 [[spring-cloud-stream-modules-mongodb-source]]
-include::{stream-apps-root}/applications/{branch}/source/mongodb-source/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/{branch}/applications/source/mongodb-source/README.adoc[tags=ref-doc]
 
 [[spring-cloud-stream-modules-time-source]]
-include::{stream-apps-root}/applications/{branch}/source/time-source/README.adoc[tags=ref-doc]
+include::{stream-apps-root}/{branch}/applications/source/time-source/README.adoc[tags=ref-doc]
 
 :leveloffset: -2
 
